# sc4-plop-and-paint

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
docs/: EFFECTS_REVERSE_ENGINEERING.md  TERRAIN_DECAL_CLIPPING.md  USAGE.md
src/app/: BuiltinPropFamilyNames.hpp  CMakeLists.txt  DbpfIndexService.cpp  DbpfIndexService.hpp  ExemplarParser.cpp  ExemplarParser.hpp  FiraMono.hpp  MeshBuilder.cpp  MeshBuilder.hpp  ModelFactory.cpp  ModelFactory.hpp  PluginLocator.cpp  PluginLocator.hpp  PluginScanner.hpp  PropertyMapper.cpp  PropertyMapper.hpp  SC4PlopAndPaintCli.exe.manifest  TextureLoader.cpp  TextureLoader.hpp  ThumbnailBinWriter.hpp  ThumbnailRenderer.cpp  ThumbnailRenderer.hpp  Utils.cpp  Utils.hpp  main.cpp
src/app/services/: DbpfIndexService.cpp  DbpfIndexService.hpp  PluginLocator.cpp
src/dll/: BasePainterInputControl.cpp  BasePainterInputControl.hpp  BuildingLotPanelTab.cpp  BuildingsPanelTab.cpp  BuildingsPanelTab.hpp  CMakeLists.txt  Constants.hpp  FamiliesPanelTab.cpp  FamiliesPanelTab.hpp  FavoritesRepository.cpp  FavoritesRepository.hpp  FilterableTablePanel.hpp  FloraPainterInputControl.cpp  FloraPainterInputControl.hpp  FloraPanelTab.cpp  FloraPanelTab.hpp  FloraPlacerInputControl.cpp  FloraPlacerInputControl.hpp  FloraRepository.cpp  FloraRepository.hpp  LotFilterHelper.cpp  LotFilterHelper.hpp  LotPlopPanel.cpp  LotPlopPanel.hpp  LotRepository.cpp  LotRepository.hpp  OccupantGroups.hpp  PaintSettings.hpp  PalettesPanelTab.cpp  PalettesPanelTab.hpp  PanelTab.hpp  PlopAndPaintPanel.cpp  PlopAndPaintPanel.hpp  PropBadgeUtils.hpp  PropFilterHelper.cpp  PropFilterHelper.hpp  PropLinePlacer.cpp  PropLinePlacer.hpp  PropPaintOverlay.cpp  PropPaintOverlay.hpp  (+25 more)
src/dll/common/: BadgeUtils.hpp  BasePainterInputControl.cpp  BasePainterInputControl.hpp  Constants.hpp  PanelTab.hpp  ThumbnailUi.hpp  Utils.hpp  WeightedPicker.cpp  WeightedPicker.hpp
src/dll/debug/: OverlayManagerDebugPanel.cpp  OverlayManagerDebugPanel.hpp
src/dll/decals/: DecalPainterInputControl.cpp  DecalPainterInputControl.hpp  DecalPanelTab.cpp  DecalPanelTab.hpp  DecalPickerInputControl.cpp  DecalPickerInputControl.hpp  DecalRepository.cpp  DecalRepository.hpp  DecalStripperInputControl.cpp  DecalStripperInputControl.hpp  DecalTextureLoader.cpp  DecalTextureLoader.hpp  LotTextureStripSidecar.cpp  LotTextureStripSidecar.hpp  LotTextureStripper.cpp  LotTextureStripper.hpp
src/dll/favorites/: FavoritesRepository.cpp  FavoritesRepository.hpp
src/dll/flora/: FloraCollectionsPanelTab.cpp  FloraCollectionsPanelTab.hpp  FloraPainterInputControl.cpp  FloraPainterInputControl.hpp  FloraPanelTab.cpp  FloraPanelTab.hpp  FloraRepository.cpp  FloraRepository.hpp  FloraStripperInputControl.cpp  FloraStripperInputControl.hpp
src/dll/lots/: BuildingStyleService.cpp  BuildingStyleService.hpp  BuildingsPanelTab.cpp  BuildingsPanelTab.hpp  LotFilterHelper.cpp  LotFilterHelper.hpp  LotRepository.cpp  LotRepository.hpp  OccupantGroups.hpp
src/dll/paint/: DecalPaintSettings.hpp  LinePlacer.cpp  LinePlacer.hpp  PaintOverlay.cpp  PaintOverlay.hpp  PaintPlacement.hpp  PaintSettings.hpp  PaintStatusPanel.cpp  PaintStatusPanel.hpp  PolygonPlacer.cpp  PolygonPlacer.hpp  RecentPaintHistory.cpp  RecentPaintHistory.hpp  RecentSwapPanel.cpp  RecentSwapPanel.hpp
src/dll/persist/: DecalSidecarPayload.hpp  DecalSidecarRepository.cpp  DecalSidecarRepository.hpp  SidecarFormat.hpp  SidecarReader.cpp  SidecarReader.hpp  SidecarSaveHook.cpp  SidecarSaveHook.hpp  SidecarWriter.cpp  SidecarWriter.hpp
src/dll/pick/: DecalPickStrategy.cpp  DecalPickStrategy.hpp  FloraPickStrategy.cpp  FloraPickStrategy.hpp  LotPickStrategy.cpp  LotPickStrategy.hpp  PropPickStrategy.cpp  PropPickStrategy.hpp  ScenePickResult.hpp  ScenePickStatusPanel.cpp  ScenePickStatusPanel.hpp  ScenePickStrategy.hpp  ScenePickerInputControl.cpp  ScenePickerInputControl.hpp
src/dll/props/: FamiliesPanelTab.cpp  FamiliesPanelTab.hpp  PropFilterHelper.cpp  PropFilterHelper.hpp  PropPainterInputControl.cpp  PropPainterInputControl.hpp  PropPanelTab.cpp  PropPanelTab.hpp  PropRepository.cpp  PropRepository.hpp  PropStripperInputControl.cpp  PropStripperInputControl.hpp
src/dll/terrain/: ClippedTerrainDecalRenderer.cpp  ClippedTerrainDecalRenderer.hpp  RelativeCallPatch.cpp  RelativeCallPatch.hpp  TerrainDecalExamples.cpp  TerrainDecalExamples.hpp  TerrainDecalHook.cpp  TerrainDecalHook.hpp  TerrainDecalSymbols.cpp  TerrainDecalSymbols.hpp  X86RelativeCallPatch.cpp  X86RelativeCallPatch.hpp
src/dll/thumbnail/: ThumbnailCache.hpp  ThumbnailStore.cpp
src/dll/utils/: Settings.cpp  Settings.h
src/shared/: BuildingStyleResolver.hpp  CMakeLists.txt  ReflectEntities.cpp  ReflectEntities.h  SeasonalSetDetector.hpp  entities.hpp  index.hpp  properties.hpp
src/shared/tests/: CMakeLists.txt  test_building_styles.cpp  test_entities.cpp  test_lot_filters.cpp  test_seasonal_sets.cpp
src/version_proxy/: CMakeLists.txt  SC4UserDirFix.cpp  SC4UserDirFix.h  VersionProxy.cpp  VersionProxy.def
